--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,8 @@
     <script src="assets/vendor.js"></script>
     <script src="assets/context.js"></script>
 
+    <script src="https://dl.frontapp.com/libs/frontjs.min.js"></script>
+
     {{content-for 'body-footer'}}
   </body>
 </html>
